[gd_scene load_steps=8 format=3 uid="uid://cyn346855vab8"]

[ext_resource type="Texture2D" uid="uid://2rpmid1gnwur" path="res://Images/UI/Buttons/RoundButton.png" id="1_2whgx"]
[ext_resource type="Script" path="res://Scenes/Prefabs/UI/PauseUI.gd" id="1_h2l0n"]
[ext_resource type="Texture2D" uid="uid://dh1afs752fy4n" path="res://Images/UI/Buttons/Pause.png" id="2_jmlmm"]
[ext_resource type="Texture2D" uid="uid://bowy12qgsf8t3" path="res://Images/UI/Buttons/Button.png" id="4_wwndn"]
[ext_resource type="FontFile" uid="uid://ccgpsjqwwow8o" path="res://Fonts/Bubblegum.ttf" id="5_lavis"]

[sub_resource type="CanvasTexture" id="CanvasTexture_7jdyl"]

[sub_resource type="CanvasTexture" id="CanvasTexture_ofcb1"]

[node name="Pause" type="Node2D"]
process_mode = 3
script = ExtResource("1_h2l0n")

[node name="PauseButton" type="Node2D" parent="."]
metadata/_edit_group_ = true

[node name="Button" type="TextureButton" parent="PauseButton"]
offset_left = -5.0
offset_top = -3.0
offset_right = 81.0
offset_bottom = 79.0
texture_normal = ExtResource("1_2whgx")
ignore_texture_size = true
stretch_mode = 0

[node name="Icon" type="Sprite2D" parent="PauseButton/Button"]
position = Vector2(43.1301, 41.7188)
scale = Vector2(0.106022, 0.106022)
texture = ExtResource("2_jmlmm")

[node name="PauseMenu" type="Node2D" parent="."]
visible = false

[node name="PanelTemplate" type="Node2D" parent="PauseMenu"]
position = Vector2(0, -54)

[node name="Background" type="Sprite2D" parent="PauseMenu/PanelTemplate"]
modulate = Color(0.968627, 0.8, 0.815686, 1)
position = Vector2(569, 376)
scale = Vector2(352, 416)
texture = SubResource("CanvasTexture_7jdyl")

[node name="Sprite2D" type="Sprite2D" parent="PauseMenu/PanelTemplate"]
modulate = Color(0.756863, 0.596078, 0.698039, 1)
position = Vector2(422, 379)
scale = Vector2(6.25, 354)
texture = SubResource("CanvasTexture_ofcb1")

[node name="Sprite2D2" type="Sprite2D" parent="PauseMenu/PanelTemplate"]
modulate = Color(0.756863, 0.596078, 0.698039, 1)
position = Vector2(567.237, 199)
rotation = 1.5708
scale = Vector2(6.25, 296.738)
texture = SubResource("CanvasTexture_ofcb1")

[node name="Sprite2D3" type="Sprite2D" parent="PauseMenu/PanelTemplate"]
modulate = Color(0.756863, 0.596078, 0.698039, 1)
position = Vector2(718, 377.75)
scale = Vector2(6.25, 364.5)
texture = SubResource("CanvasTexture_ofcb1")

[node name="Sprite2D4" type="Sprite2D" parent="PauseMenu/PanelTemplate"]
modulate = Color(0.756863, 0.596078, 0.698039, 1)
position = Vector2(570.116, 558)
rotation = 1.5708
scale = Vector2(6.25, 302.232)
texture = SubResource("CanvasTexture_ofcb1")

[node name="BackButton" type="TextureButton" parent="PauseMenu"]
offset_left = 457.74
offset_top = 267.563
offset_right = 685.74
offset_bottom = 342.563
texture_normal = ExtResource("4_wwndn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseMenu/BackButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 207.0
offset_bottom = 57.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.556863)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("5_lavis")
theme_override_font_sizes/font_size = 35
text = "Wroc"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="TextureButton" parent="PauseMenu"]
offset_left = 457.74
offset_top = 337.563
offset_right = 685.74
offset_bottom = 412.563
texture_normal = ExtResource("4_wwndn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseMenu/RestartButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 207.0
offset_bottom = 57.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.556863)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("5_lavis")
theme_override_font_sizes/font_size = 35
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="TextureButton" parent="PauseMenu"]
offset_left = 457.74
offset_top = 404.563
offset_right = 685.74
offset_bottom = 479.563
texture_normal = ExtResource("4_wwndn")
ignore_texture_size = true
stretch_mode = 0

[node name="Label" type="Label" parent="PauseMenu/QuitButton"]
layout_mode = 0
offset_left = 19.0
offset_top = 17.0
offset_right = 207.0
offset_bottom = 57.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.556863)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_fonts/font = ExtResource("5_lavis")
theme_override_font_sizes/font_size = 35
text = "Wyjdz"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="PauseMenu"]
offset_left = 432.74
offset_top = 161.563
offset_right = 705.74
offset_bottom = 272.563
theme_override_fonts/font = ExtResource("5_lavis")
theme_override_font_sizes/font_size = 40
text = "Gra 
Wstrzymana"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BoosterGamesLeft" type="Label" parent="PauseMenu"]
visible = false
offset_left = 437.0
offset_top = 18.0
offset_right = 1152.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("5_lavis")
theme_override_font_sizes/font_size = 20
text = "Booster nazwa_boostera aktywny. Pozostalo X gier (wliczajac te)."

[connection signal="mouse_entered" from="PauseButton/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="PauseButton/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="PauseButton/Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="PauseMenu/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenu/BackButton" to="." method="_on_back_button_mouse_exited"]
[connection signal="pressed" from="PauseMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="mouse_entered" from="PauseMenu/RestartButton" to="." method="_on_restart_button_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenu/RestartButton" to="." method="_on_restart_button_mouse_exited"]
[connection signal="pressed" from="PauseMenu/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="mouse_entered" from="PauseMenu/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="mouse_exited" from="PauseMenu/QuitButton" to="." method="_on_quit_button_mouse_exited"]
[connection signal="pressed" from="PauseMenu/QuitButton" to="." method="_on_quit_button_pressed"]
